syntax = "proto3";

package v2ray.core.transport.internet.headers.noop;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Headers.Noop";
option go_package = "github.com/ghxhy/v2ray-core/v5/transport/internet/headers/noop";
option java_package = "com.v2ray.core.transport.internet.headers.noop";
option java_multiple_files = true;

message Config {}

message ConnectionConfig {}
