syntax = "proto3";

package v2ray.core.transport.internet.headers.tls;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Headers.Tls";
option go_package = "github.com/ghxhy/v2ray-core/v5/transport/internet/headers/tls";
option java_package = "com.v2ray.core.transport.internet.headers.tls";
option java_multiple_files = true;

message PacketConfig {}
